--- a/canigo-documentacio-versions-3x-integracio/modul-pica/index.html
+++ b/canigo-documentacio-versions-3x-integracio/modul-pica/index.html
@@ -320,15 +320,15 @@
 
 						
 
-<h2 id="propòsit">Propòsit</h2>
+<h2 id="propòsit:aae349f660baf8b9e88fc81fc36170e4">Propòsit</h2>
 
 <p>El propòsit del connector és proporcionar una interfície java per accedir a la PICA (Plataforma d&rsquo;Integració i Col.laboració Administrativa).</p>
 
 <p>El connector amb la PICA disposa de dos tipus de comunicació, un d&rsquo;ells a través de web service síncron, i l&rsquo;altre, mitjançant web service asíncron.</p>
 
-<h2 id="instal-lació-i-configuració">Instal.lació i Configuració</h2>
+<h2 id="instal-lació-i-configuració:aae349f660baf8b9e88fc81fc36170e4">Instal.lació i Configuració</h2>
 
-<h3 id="instal-lació">Instal.lació</h3>
+<h3 id="instal-lació:aae349f660baf8b9e88fc81fc36170e4">Instal.lació</h3>
 
 <p>Per tal d&rsquo;instal-lar el mòdul de PICA es pot incloure automàticament a través de l&rsquo;eina de suport al desenvolupament o bé afegir manualment en el pom.xml de l&rsquo;aplicació la següent dependència:</p>
 
@@ -341,7 +341,7 @@
 &lt;/dependency&gt;
 </code></pre>
 
-<h3 id="configuració">Configuració</h3>
+<h3 id="configuració:aae349f660baf8b9e88fc81fc36170e4">Configuració</h3>
 
 <p>La configuració es realitza automàticament a partir de la eina de suport al desenvolupament.</p>
 
@@ -460,9 +460,9 @@ pica.properties:
     pro.pica.axisdefinition.location=file:/export/AppJavaDades/pro/.../axis2client/
 </code></pre>
 
-<h2 id="utilització-del-mòdul">Utilització del Mòdul</h2>
+<h2 id="utilització-del-mòdul:aae349f660baf8b9e88fc81fc36170e4">Utilització del Mòdul</h2>
 
-<h3 id="jsf">JSF</h3>
+<h3 id="jsf:aae349f660baf8b9e88fc81fc36170e4">JSF</h3>
 
 <p><strong>app-integration-custom.xml</strong></p>
 
