--- a/canigo-documentacio-versions-3x-integracio/modul-sap/index.html
+++ b/canigo-documentacio-versions-3x-integracio/modul-sap/index.html
@@ -320,13 +320,13 @@
 
 						
 
-<h2 id="propòsit">Propòsit</h2>
+<h2 id="propòsit:dc9f209b3875087ae2f06bd4632533ea">Propòsit</h2>
 
 <p>El propòsit del connector és proporcionar una interfície simplificada per accedir a backends SAP de la Generalitat.</p>
 
-<h2 id="instal-lació-i-configuració">Instal.lació i Configuració</h2>
+<h2 id="instal-lació-i-configuració:dc9f209b3875087ae2f06bd4632533ea">Instal.lació i Configuració</h2>
 
-<h3 id="instal-lació">Instal.lació</h3>
+<h3 id="instal-lació:dc9f209b3875087ae2f06bd4632533ea">Instal.lació</h3>
 
 <p>Per poder utilitzar el connector haurem de configurar el projecte perquè inclogui dues llibreries dll i diferents jars:</p>
 
@@ -359,7 +359,7 @@
 &lt;/dependency&gt;
 </code></pre>
 
-<h3 id="configuració">Configuració</h3>
+<h3 id="configuració:dc9f209b3875087ae2f06bd4632533ea">Configuració</h3>
 
 <p>La configuració es realitza automàticament a partir de l&rsquo;eina de suport al desenvolupament.</p>
 
@@ -437,9 +437,9 @@
 </tbody>
 </table>
 
-<h2 id="utilització-del-mòdul">Utilització del Mòdul</h2>
+<h2 id="utilització-del-mòdul:dc9f209b3875087ae2f06bd4632533ea">Utilització del Mòdul</h2>
 
-<h3 id="jsf">JSF</h3>
+<h3 id="jsf:dc9f209b3875087ae2f06bd4632533ea">JSF</h3>
 
 <p>Per a configurar el mòdul és necessari:</p>
 
