--- a/canigo-documentacio-versions-anteriors/versio-2/index.html
+++ b/canigo-documentacio-versions-anteriors/versio-2/index.html
@@ -316,7 +316,7 @@
 
 						
 
-<h3 id="changelog">Changelog</h3>
+<h3 id="changelog:1f293efe93c0c1fbe8e6676dc3e2a771">Changelog</h3>
 
 <p><a href="https://github.com/cs-canigo/docs.canigo2.cs-canigo.github.io/archive/v1.0.2.zip">1.0.2</a> (28/01/2016)</p>
 
