--- a/canigo-documentacio/normatius/index.html
+++ b/canigo-documentacio/normatius/index.html
@@ -315,7 +315,7 @@
 
 						
 
-<h3 id="principals-normes">Principals normes</h3>
+<h3 id="principals-normes:f157041d48467851520f44e620014b37">Principals normes</h3>
 
 <ul>
 <li><a href="/related/canigo/normes/NOR_0009_Desenvolupament_J2EE-V03.pdf">Norma de desenvolupament J2EE</a></li>
@@ -323,7 +323,7 @@
 <li><a href="/related/canigo/normes/SC-NOR11-01 Norma nomenclatura i esquema de bases de dades_v2.2.pdf">Norma de desenvolupament de BBDD</a></li>
 </ul>
 
-<h3 id="regles-d-estil">Regles d&rsquo;estil</h3>
+<h3 id="regles-d-estil:f157041d48467851520f44e620014b37">Regles d&rsquo;estil</h3>
 
 <ul>
 <li>Per als entorns de desenvolupament es recomana l&rsquo;ús de Checkstyle, PMD i Findbugs</li>
