--- a/canigo-download-related/configuracio-entorn/index.html
+++ b/canigo-download-related/configuracio-entorn/index.html
@@ -306,7 +306,7 @@
 
 						
 
-<h3 id="configuració-entorn-desenvolupament">Configuració Entorn Desenvolupament</h3>
+<h3 id="configuració-entorn-desenvolupament:5e7506d3fa7106ddb8aac381deaecce7">Configuració Entorn Desenvolupament</h3>
 
 
 					
