--- a/canigo-download-related/guia-inici/index.html
+++ b/canigo-download-related/guia-inici/index.html
@@ -306,11 +306,11 @@
 
 						
 
-<h3 id="introducció">Introducció</h3>
+<h3 id="introducció:03e4287718c74d619643fc272d795195">Introducció</h3>
 
 <p>Aquest document pretén oferir al desenvolupador d&rsquo;aplicacions Canigó 3.0 un entorn de treball preconfigurat que permeti començar a treballar amb el framework en pocs minuts. Aquest entorn de treball consta d&rsquo;un IDE de desenvolupament (Eclipse), un servidor d&rsquo;aplicacions (Apache Tomcat), una màquina virtual (JDK 1.6), eina de gestió de repositoris i construcció de projectes (Maven) i una eina per la configuració de les variables d&rsquo;entorn.</p>
 
-<h3 id="software-recomenat-pel-centre-de-suport">Software recomenat pel centre de Suport</h3>
+<h3 id="software-recomenat-pel-centre-de-suport:03e4287718c74d619643fc272d795195">Software recomenat pel centre de Suport</h3>
 
 <p>Es recomana utilitzar l&rsquo;entorn de desenvolupament basat en Eclipse i Maven que us donem al centre de Suport de Canigó. Per construir aquest entorn cal descarregar el següent arxiu:</p>
 
@@ -319,7 +319,7 @@
 <li>[Entorn de treball propi]: en el cas que es tingui un entorn de treball propi prèviament instal.lat amb els components anomenats al punt anterior i vulguem seguir fent-lo servir podem optar només per instal.lar els &ldquo;Plug-ins de Canigó 3.0&rdquo; a través d&rsquo;Eclipse seguint els passos del següent enllaç: <a href="/canigo-download-related/instalar-plugin">Instal.lar només el plug-in</a></li>
 </ul>
 
-<h3 id="passos-a-seguir">Passos a seguir</h3>
+<h3 id="passos-a-seguir:03e4287718c74d619643fc272d795195">Passos a seguir</h3>
 
 <ul>
 <li>Cal descarregar l&rsquo;entorn de treball en el següent <a href="http://repos.canigo.ctti.gencat.cat/repository/maven2/canigo/entorn-treball/canigo3.html">enllaç</a></li>
@@ -372,7 +372,7 @@ per defecte de la ruta &ldquo;\canigo3\workspace&rdquo;.
 <img src="/images/canigo-guia-inici/projectView.PNG" alt="projectView" /></p></li>
 </ul>
 
-<h3 id="afegir-mòduls-al-plugin">Afegir Mòduls al plugin</h3>
+<h3 id="afegir-mòduls-al-plugin:03e4287718c74d619643fc272d795195">Afegir Mòduls al plugin</h3>
 
 <ul>
 <li><p>Prement el botó secundari del ratolí sobre el projecte i anant a la pestanya de &ldquo;Canigó&rdquo; sens obrirà un submenú amb els següents tres apartats:</p>
