--- a/canigo-download-related/release-notes-canigo-2/index.html
+++ b/canigo-download-related/release-notes-canigo-2/index.html
@@ -306,7 +306,7 @@
 
 						
 
-<h4 id="canvis">Canvis</h4>
+<h4 id="canvis:dddf4df2b25419d469f693912de4d05d">Canvis</h4>
 
 <ul>
 <li><p>Canvi <a href="https://cstd.ctti.gencat.cat/jiracstd/browse/CAN-1726">CAN-1726</a>: Notificacions electròniques <br>
@@ -330,7 +330,7 @@
 <b>Solució</b>: Modificació del connector  <br></p></li>
 </ul>
 
-<h4 id="bugs-sol-lucionats">Bugs sol·lucionats</h4>
+<h4 id="bugs-sol-lucionats:dddf4df2b25419d469f693912de4d05d">Bugs sol·lucionats</h4>
 
 <ul>
 <li><p>Bug <a href="https://cstd.ctti.gencat.cat/jiracstd/browse/CAN-1683">CAN-1683</a> El connector de DNI no permet informar el camp funcionari <br>
