--- a/canigo-download-related/release-notes-canigo-31/index.html
+++ b/canigo-download-related/release-notes-canigo-31/index.html
@@ -306,7 +306,7 @@
 
 						
 
-<h4 id="canvis">Canvis</h4>
+<h4 id="canvis:8b37caac3ad4f8dc3df73447e376c46d">Canvis</h4>
 
 <p><a href="http://cstd.ctti.gencat.cat/jiracstd/browse/CAN-1956">CAN-1956</a> - Publicació Canigó 3.1.</p>
 
