--- a/canigo/download/index.html
+++ b/canigo/download/index.html
@@ -303,7 +303,7 @@
 
 						
 
-<h2 id="repositoris-maven">Repositoris Maven</h2>
+<h2 id="repositoris-maven:147ca6d03f222fe2ead83908bb3bcedf">Repositoris Maven</h2>
 
 <ul>
 <li>Repositori Maven 1: <a href="http://repos.canigo.ctti.gencat.cat/repository/maven1">http://repos.canigo.ctti.gencat.cat/repository/maven1</a></li>
@@ -312,7 +312,7 @@
 
 <p>&nbsp;</p>
 
-<h2 id="canigó-3-1">Canigó 3.1</h2>
+<h2 id="canigó-3-1:147ca6d03f222fe2ead83908bb3bcedf">Canigó 3.1</h2>
 
 <ul>
 <li><a href="http://repos.canigo.ctti.gencat.cat/repository/maven2/cat/gencat/ctti/">Mòduls de Canigó 3.1</a></li>
@@ -320,7 +320,7 @@
 <li><a href="/canigo-download-related/matrius-compatibilitats">Matriu de Compatibilitat Canigo 3</a></li>
 </ul>
 
-<h3 id="creació-de-l-entorn-local">Creació de l&rsquo;entorn local</h3>
+<h3 id="creació-de-l-entorn-local:147ca6d03f222fe2ead83908bb3bcedf">Creació de l&rsquo;entorn local</h3>
 
 <!--
 - Descàrrega de l'[entorn base de treball](http://repos.canigo.ctti.gencat.cat/repository/maven2/canigo/entorn-treball/canigo3.html) *És necessari realitzar l'upgrade del plugin de Canigó per Eclipse a la versió 1.2.0.
@@ -338,7 +338,7 @@
 
 <p>&nbsp;</p>
 
-<h2 id="canigó-2-3-20">Canigó 2.3.20</h2>
+<h2 id="canigó-2-3-20:147ca6d03f222fe2ead83908bb3bcedf">Canigó 2.3.20</h2>
 
 <ul>
 <li><a href="http://repos.canigo.ctti.gencat.cat/repository/maven2/canigo/">Serveis de Canigó 2.3.20</a></li>
@@ -349,7 +349,7 @@
 <li><a href="http://repos.canigo.ctti.gencat.cat/repository/maven2/canigo/plantilla-canigo-inicial/2.3.20/demo-canigo-static-compress-2.3.20.zip">Contingut estàtic versió 2.3.20 (Comprimit) (format .zip)</a></li>
 </ul>
 
-<h3 id="creació-de-l-entorn-local-1">Creació de l&rsquo;entorn local</h3>
+<h3 id="creació-de-l-entorn-local-1:147ca6d03f222fe2ead83908bb3bcedf">Creació de l&rsquo;entorn local</h3>
 
 <ul>
 <li>Descàrrega de l&rsquo;<a href="http://repos.canigo.ctti.gencat.cat/repository/maven2/canigo/entorn-treball/canigo.zip">entorn base de treball</a></li>
@@ -358,7 +358,7 @@
 
 <p>&nbsp;</p>
 
-<h2 id="versions-anteriors-2-x">Versions anteriors 2.x</h2>
+<h2 id="versions-anteriors-2-x:147ca6d03f222fe2ead83908bb3bcedf">Versions anteriors 2.x</h2>
 
 <p>Per a versions antigues del Framework Canigó, contacteu amb el Centre de Suport.
 <p>&nbsp;</p></p>
