--- a/canigo/framework/index.html
+++ b/canigo/framework/index.html
@@ -304,14 +304,14 @@
 <ul>
 <li>
 <ul>
-<li><a href="#descripció-del-framework">Descripció del framework</a></li>
-<li><a href="#components-base">Components Base</a></li>
-<li><a href="#nucli-del-framework">Nucli del Framework</a></li>
-<li><a href="#mòdul-de-seguretat">Mòdul de Seguretat</a></li>
-<li><a href="#mòdul-d-integració">Mòdul d&rsquo;Integració</a></li>
-<li><a href="#mòdul-de-persistència">Mòdul de Persistència</a></li>
-<li><a href="#mòdul-de-suport">Mòdul de Suport</a></li>
-<li><a href="#mòdul-d-operació">Mòdul d&rsquo;Operació</a></li>
+<li><a href="#descripció-del-framework:021e32cfe8cd717ee73b2478bc47156c">Descripció del framework</a></li>
+<li><a href="#components-base:021e32cfe8cd717ee73b2478bc47156c">Components Base</a></li>
+<li><a href="#nucli-del-framework:021e32cfe8cd717ee73b2478bc47156c">Nucli del Framework</a></li>
+<li><a href="#mòdul-de-seguretat:021e32cfe8cd717ee73b2478bc47156c">Mòdul de Seguretat</a></li>
+<li><a href="#mòdul-d-integració:021e32cfe8cd717ee73b2478bc47156c">Mòdul d&rsquo;Integració</a></li>
+<li><a href="#mòdul-de-persistència:021e32cfe8cd717ee73b2478bc47156c">Mòdul de Persistència</a></li>
+<li><a href="#mòdul-de-suport:021e32cfe8cd717ee73b2478bc47156c">Mòdul de Suport</a></li>
+<li><a href="#mòdul-d-operació:021e32cfe8cd717ee73b2478bc47156c">Mòdul d&rsquo;Operació</a></li>
 </ul></li>
 </ul>
 </nav>
@@ -325,7 +325,7 @@
 
 						
 
-<h2 id="descripció-del-framework">Descripció del framework</h2>
+<h2 id="descripció-del-framework:021e32cfe8cd717ee73b2478bc47156c">Descripció del framework</h2>
 
 <p>Canigó es defineix com un &ldquo;Espai de treball tecnològic comú per al desenvolupament i execució d&rsquo;aplicacions en l&rsquo;àmbit dels sistemes corporatius i departamentals de la Generalitat de Catalunya&rdquo;, i es els seus objectius són:</p>
 
@@ -375,7 +375,7 @@
 
 <p>El framework base es pot classificar en els següents blocs:</p>
 
-<h2 id="components-base">Components Base</h2>
+<h2 id="components-base:021e32cfe8cd717ee73b2478bc47156c">Components Base</h2>
 
 <p>Canigó3 és un framework de codi obert per a la plataforma Java. Està basat en Spring, la primera versió del qual va ser creada per Rod Johnson a l&rsquo;octubre de 2002. Està pensat per donar suport a:</p>
 
@@ -395,7 +395,7 @@
 - <strong>JPA</strong> proporciona un mòdel de persistència basat en POJO&rsquo;s (Plain Old Java Objects) per mapejar bases de dades relacionals en Java.
 - <strong>AOP (Aspect Oriented Programming)</strong> per intercepció d&rsquo;events a l&rsquo;aplicació sense necessitat de modificar el codi</p>
 
-<h2 id="nucli-del-framework">Nucli del Framework</h2>
+<h2 id="nucli-del-framework:021e32cfe8cd717ee73b2478bc47156c">Nucli del Framework</h2>
 
 <p>Aquest mòdul és el <i>core</i> del framework on es troben les principals caracteristiquest:</p>
 
@@ -406,7 +406,7 @@
 <li><strong>Servei d&rsquo;Excepcions</strong>: permet informar que s&rsquo;ha produït un error al realitzar una petició. Canigó ofereix una sèrie d&rsquo;excepcions per defecte (BaseException, CoreException, &hellip;). També proporciona un mecanisme d&rsquo;intercepció d&rsquo;Excepcions per a evitar &ldquo;try-catch&rdquo;.</li>
 </ul>
 
-<h2 id="mòdul-de-seguretat">Mòdul de Seguretat</h2>
+<h2 id="mòdul-de-seguretat:021e32cfe8cd717ee73b2478bc47156c">Mòdul de Seguretat</h2>
 
 <p>Té com a propòsit gestionar l&rsquo;autenticació i autorització dels usuaris que accedeixen a les aplicacions.</p>
 
@@ -415,7 +415,7 @@
 <li><strong>Backends Seguretat</strong>: El servei de seguretat s&rsquo;integra amb GICAR, SACE, LDAP, Base de dades i Inmemory.</li>
 </ul>
 
-<h2 id="mòdul-d-integració">Mòdul d&rsquo;Integració</h2>
+<h2 id="mòdul-d-integració:021e32cfe8cd717ee73b2478bc47156c">Mòdul d&rsquo;Integració</h2>
 
 <p>La finalitat d&rsquo;aquests mòduls és facilitar l&rsquo;accés a diferents serveis que ofereix la Generalitat.</p>
 
@@ -432,7 +432,7 @@
 <li><strong>Cues</strong>: Canigó 3 no disposa d&rsquo;un mòdul de Gestió de Cues. S&rsquo;ha realitzat una guia on s&rsquo;explica com produir i consumir missatges d&rsquo;una cua. Proposa l&rsquo;utilització d&rsquo;Spring JMS (Java Message Service).</li>
 </ul>
 
-<h2 id="mòdul-de-persistència">Mòdul de Persistència</h2>
+<h2 id="mòdul-de-persistència:021e32cfe8cd717ee73b2478bc47156c">Mòdul de Persistència</h2>
 
 <p>Aquest mòdul permet persistir i recuperar dades entre l&rsquo;aplicació i el motor de base de dades.</p>
 
@@ -440,7 +440,7 @@
 <li><strong>JPA</strong>: Java Persistence API busca la manera d&rsquo;unificar les utilitats que proporcionen un mapeig objecte-relacional. La implementació de JPA per defecte a Canigó 3 és Hibernate.</li>
 </ul>
 
-<h2 id="mòdul-de-suport">Mòdul de Suport</h2>
+<h2 id="mòdul-de-suport:021e32cfe8cd717ee73b2478bc47156c">Mòdul de Suport</h2>
 
 <p>Aquest mòdul facilita l&rsquo;ús d&rsquo;un conjunt addicional de funcionalitats mitjançant el framework.</p>
 
@@ -453,7 +453,7 @@
 <li><strong>SFTP</strong>: Permet enviar i rebre arxius entre el servidor on s&rsquo;executa l&rsquo;aplicació i altres servidors de forma segura mitjançant un intercanvi de claus. Basat en llibreries JSCH i Commons-VFS.</li>
 </ul>
 
-<h2 id="mòdul-d-operació">Mòdul d&rsquo;Operació</h2>
+<h2 id="mòdul-d-operació:021e32cfe8cd717ee73b2478bc47156c">Mòdul d&rsquo;Operació</h2>
 
 <ul>
 <li><strong>Instrumentació</strong>: permet a l&rsquo;aplicació generar dades d&rsquo;instrumentació (nombre de peticions, nombre d&rsquo;errors, &hellip;) de la seva execució i posteriorment ser explotades amb eines de monitorització.</li>
