--- a/centre-de-suport-related/estat-workflow espai suport/index.html
+++ b/centre-de-suport-related/estat-workflow espai suport/index.html
@@ -306,7 +306,7 @@
 
 						
 
-<h3 id="introducció">Introducció</h3>
+<h3 id="introducció:b2c4e8a710b3289d34a91ec870b7a65a">Introducció</h3>
 
 <p>L&rsquo;espai de suport permet reportar diferents activitats relacionades amb el Framework Canigó. Una activitat pot ser una incidència, una consulta o una petició de canvi.</p>
 
@@ -320,7 +320,7 @@
 
 <p>En els següents apartats s&rsquo;expliquen els diferents estats pels quals pot passar una activitat i el que signifiquen cadascun d&rsquo;ells.</p>
 
-<h4 id="1-incidències-i-consultes">1. Incidències i consultes.</h4>
+<h4 id="1-incidències-i-consultes:b2c4e8a710b3289d34a91ec870b7a65a">1. Incidències i consultes.</h4>
 
 <p><b>Estats</b></p>
 
@@ -334,11 +334,10 @@
 <li><b>Pendent</b>: l&rsquo;OT de Canigó està en espera de què el reportador de l&rsquo;activitat afegeixi les dades que se li han demanat.<br>
     - Estats següents: En <b>progrés</b> (el reportador ha afegit les dades que se li han demanat i es continua amb la resolució de l&rsquo;activitat), <b>Tancat</b> per &ldquo;<b>Falta d&rsquo;informació</b>&rdquo; (en aquest cas han passat tres o més dies des que es va sol- licitar més informació per la resolució de l&rsquo;activitat i el reportador de la mateixa no l&rsquo;ha afegida), <b>Assignat</b> (el reportador de l&rsquo;activitat ha afegit les dades i així ho comunica, opció &ldquo;<b>Dades afegides</b>&rdquo;).</li>
 <li><b>Resolt</b>: des de l&rsquo;OT de Canigó s&rsquo;ha donat una solució per l&rsquo;activitat reportada.<br>
-    - Estats següents: <b>Tancat</b< en aquest cas el reportador de l'activitat pot tancar-la indicant el grau de satisfacció de la solució proposada, valorant-la d'1 a 5. Anàlogament, l'OT de Canigó pot tancar l'activitat per "<b>Tancada automàticament</b>&rdquo; en el cas que el reportador de l&rsquo;activitat no l&rsquo;hagi tancat havent transcorregut tres o més dies. Finalment, un altre estat al que es pot arribar a partir d&rsquo;aquest és &ldquo;<b>Assignat</b>&rdquo;, aquest és l&rsquo;estat al que s&rsquo;arriba quan el reportador de l&rsquo;activitat no queda conforme amb la resolució donada, amb ell indica que vol que la persona encarregada de la resolució de l&rsquo;activitat proposi una altra solució.
-<br /></li>
+    - Estats següents: <b>Tancat</b< en aquest cas el reportador de l'activitat pot tancar-la indicant el grau de satisfacció de la solució proposada, valorant-la d'1 a 5. Anàlogament, l'OT de Canigó pot tancar l'activitat per "<b>Tancada automàticament</b>&rdquo; en el cas que el reportador de l&rsquo;activitat no l&rsquo;hagi tancat havent transcorregut tres o més dies. Finalment, un altre estat al que es pot arribar a partir d&rsquo;aquest és &ldquo;<b>Assignat</b>&rdquo;, aquest és l&rsquo;estat al que s&rsquo;arriba quan el reportador de l&rsquo;activitat no queda conforme amb la resolució donada, amb ell indica que vol que la persona encarregada de la resolució de l&rsquo;activitat proposi una altra solució.</li>
 </ul>
 
-<h4 id="2-peticions-de-canvi">2. Peticions de canvi.</h4>
+<h4 id="2-peticions-de-canvi:b2c4e8a710b3289d34a91ec870b7a65a">2. Peticions de canvi.</h4>
 
 <p><b>Estats</b></p>
 
