--- a/centre-de-suport-related/obertura-peticions/index.html
+++ b/centre-de-suport-related/obertura-peticions/index.html
@@ -306,11 +306,11 @@
 
 						
 
-<h4 id="tipus-de-peticions">Tipus de peticions</h4>
+<h4 id="tipus-de-peticions:c595bc6f02c04d848bd7e5828c9ffd50">Tipus de peticions</h4>
 
 <p>Existeixen 4 tipus diferents de peticions que es poden obrir pel servei Canigó (Framework J2EE).</p>
 
-<h4 id="peticions-de-canvi">Peticions de Canvi</h4>
+<h4 id="peticions-de-canvi:c595bc6f02c04d848bd7e5828c9ffd50">Peticions de Canvi</h4>
 
 <p>Peticions indicades quan es creu interessant que el Framework reflecteixi algun canvi important en algun dels seus components o bé sorgeix la necessitat de crear algun component nou.</p>
 
@@ -320,21 +320,21 @@
 
 <p>En cas de que es desenvolupi el canvi, normalment aquest estarà disponible en la següent versió de Canigó.</p>
 
-<h4 id="peticions-de-consulta">Peticions de Consulta</h4>
+<h4 id="peticions-de-consulta:c595bc6f02c04d848bd7e5828c9ffd50">Peticions de Consulta</h4>
 
 <p>Peticions orientades a la resolució de qüestions relacionades amb la utilització del Framework de Canigó. En aquest tipus de peticions es poden redactar preguntes relacionades amb problemes derivats de l&rsquo;ús dels components del Framework, errors de desenvolupament i dubtes varis.</p>
 
 <p>El mateix Centre de suport s&rsquo;encarregarà de canviar la categorització de Consulta a Incidència si es detectés un problema a nivell del Framework dintre de la petició.</p>
 
-<h4 id="peticions-d-incidència">Peticions d&rsquo;Incidència</h4>
+<h4 id="peticions-d-incidència:c595bc6f02c04d848bd7e5828c9ffd50">Peticions d&rsquo;Incidència</h4>
 
 <p>Peticions relacionades amb errors detectats dintre d&rsquo;algun component del Framework. Aquests errors poden ser deguts a un ús incorrecte dels components del Framework. Per tal motiu es recomana llegir la documentació del Framework disponible en el portali en cas de dubte, obrir una petició de Consulta.</p>
 
-<h4 id="peticions-de-suport">Peticions de Suport</h4>
+<h4 id="peticions-de-suport:c595bc6f02c04d848bd7e5828c9ffd50">Peticions de Suport</h4>
 
 <p>Peticions que sol- liciten que el Centre de Suport de Canigó faci un seguiment més proper de l&rsquo;aplicació per tal de resoldre algun problema específic o bé acompanyar i assessorar a l&rsquo;aplicació en el transcurs d&rsquo;un desenvolupament especial amb Canigó.</p>
 
-<h3 id="dades-de-les-peticions">Dades de les Peticions</h3>
+<h3 id="dades-de-les-peticions:c595bc6f02c04d848bd7e5828c9ffd50">Dades de les Peticions</h3>
 
 <p>Inicialment s&rsquo;han d&rsquo;informar una sèrie de dades en el moment de la creació de la petició. Aquestes dades tot i que no siguin obligatòries per tal de crear la petició en el JIRA si ho són de cara a la resolució d&rsquo;aquesta.
 La carència d&rsquo;aquestes dades allarga la resolució de la petició en molts casos i és per aquest motiu que es molt recomanable que s&rsquo;omplin.</p>
