--- a/centre-de-suport/que-es-el-cs/index.html
+++ b/centre-de-suport/que-es-el-cs/index.html
@@ -323,7 +323,7 @@
 <li><strong>Plataforma formularis electrònics</strong>: plataforma que permet la interacció amb formularis electrònics basats en Adobe Livecycle ES4. Ofereix les funcionalitats d&rsquo;extracció de dades dels formularis o la seva renderització, a més de la publicació i activació de nous formularis.</li>
 </ul>
 
-<h2 id="quins-són-els-seus-objectius">Quins són els seus objectius?</h2>
+<h2 id="quins-són-els-seus-objectius:bcc69ef1995de8a8bf71270b60ad3da2">Quins són els seus objectius?</h2>
 
 <p>Els objectius principals del Centre de Suport es poden resumir en els següents aspectes:</p>
 
