--- a/cloud/caas/index.html
+++ b/cloud/caas/index.html
@@ -303,7 +303,7 @@
 
 						
 
-<h2 id="cloud-públic">Cloud Públic</h2>
+<h2 id="cloud-públic:33171de8de3e703e8b316468c899b7da">Cloud Públic</h2>
 
 <ul>
 <li><p><strong>Bluemix</strong></p>
@@ -324,7 +324,7 @@
 </ul></li>
 </ul>
 
-<h2 id="cloud-privat">Cloud Privat</h2>
+<h2 id="cloud-privat:33171de8de3e703e8b316468c899b7da">Cloud Privat</h2>
 
 <ul>
 <li><p><strong>Openshift</strong></p>
