--- a/drafts/bi/index.html
+++ b/drafts/bi/index.html
@@ -302,11 +302,11 @@
 <ul>
 <li>
 <ul>
-<li><a href="#governança-dels-bis-corporatius">Governança dels BIs corporatius</a></li>
-<li><a href="#plataformes-corporatives-de-bi">Plataformes Corporatives de BI</a></li>
-<li><a href="#contacte">Contacte</a></li>
-<li><a href="#documentació">Documentació</a></li>
-<li><a href="#refèrencies-i-coneixement">Refèrencies i coneixement</a></li>
+<li><a href="#governança-dels-bis-corporatius:cbbfef5020d933bdbf50d1dfc2577d0d">Governança dels BIs corporatius</a></li>
+<li><a href="#plataformes-corporatives-de-bi:cbbfef5020d933bdbf50d1dfc2577d0d">Plataformes Corporatives de BI</a></li>
+<li><a href="#contacte:cbbfef5020d933bdbf50d1dfc2577d0d">Contacte</a></li>
+<li><a href="#documentació:cbbfef5020d933bdbf50d1dfc2577d0d">Documentació</a></li>
+<li><a href="#refèrencies-i-coneixement:cbbfef5020d933bdbf50d1dfc2577d0d">Refèrencies i coneixement</a></li>
 </ul></li>
 </ul>
 </nav>
@@ -320,7 +320,7 @@
 
 						
 
-<h2 id="governança-dels-bis-corporatius">Governança dels BIs corporatius</h2>
+<h2 id="governança-dels-bis-corporatius:cbbfef5020d933bdbf50d1dfc2577d0d">Governança dels BIs corporatius</h2>
 
 <p>Els àmbits de gestió de la governança dels BIs corporatius són:</p>
 
@@ -346,7 +346,7 @@
 
 <p>Es coordinen les iniciatives en quant a l&rsquo;ús dels Bis corporatius i s’ofereixen serveis necessaris.Es proporciona un punt únic de contacte per donar servei a l&rsquo;anàlisi i l&rsquo;execució de nous projectes i altres serveis.</p>
 
-<h2 id="plataformes-corporatives-de-bi">Plataformes Corporatives de BI</h2>
+<h2 id="plataformes-corporatives-de-bi:cbbfef5020d933bdbf50d1dfc2577d0d">Plataformes Corporatives de BI</h2>
 
 <p>Les plataformes en servei són el resultat de l’estudi realitzat dels diferents escenaris i la selecció de la millor opció en base a criteris objectius i mesurables. Els criteris emprats per a la valoració d’escenaris van ser de cost econòmic, topologia/xarxa, elasticitat i escalabilitat, consolidació i facilitat de migració.</p>
 
@@ -384,11 +384,11 @@
 <li>Administració i suport especialitzat en les tecnologies corporatives de BI: Microstrategy, Oracle Business Intelligence i Microsoft.</li>
 </ul>
 
-<h2 id="contacte">Contacte</h2>
+<h2 id="contacte:cbbfef5020d933bdbf50d1dfc2577d0d">Contacte</h2>
 
 <p>En contacte amb el Centre de Governança BI és a través de la bústia de correu <a href="govern_bi@gencat.cat">govern_bi@gencat.cat</a>.</p>
 
-<h2 id="documentació">Documentació</h2>
+<h2 id="documentació:cbbfef5020d933bdbf50d1dfc2577d0d">Documentació</h2>
 
 <p>El Centre de Governança BI posa a disposició dels interessats, la següent documentació:</p>
 
@@ -409,12 +409,11 @@
 <li><a href="**DA BI2">DA BI2.pdf</a></li>
 <li><a href="**DA BI3">DA BI3.pdf</a></li>
 <li><a href="**DA BI4">DA BI4.pdf</a></li>
-<li><a href="DA infraestructura Comuna Click&amp;Decide.pdf">DA infraestructura Comuna Click&amp;Decide.pdf</a>
-<br /></li>
+<li><a href="DA infraestructura Comuna Click&amp;Decide.pdf">DA infraestructura Comuna Click&amp;Decide.pdf</a></li>
 </ul></li>
 </ul>
 
-<h2 id="refèrencies-i-coneixement">Refèrencies i coneixement</h2>
+<h2 id="refèrencies-i-coneixement:cbbfef5020d933bdbf50d1dfc2577d0d">Refèrencies i coneixement</h2>
 
 <p>En construcció&hellip;</p>
 
