--- a/drafts/norma-desenvolupament-web/index.html
+++ b/drafts/norma-desenvolupament-web/index.html
@@ -301,7 +301,7 @@
 
 						
 
-<h2 id="resum-i-context">Resum i context</h2>
+<h2 id="resum-i-context:57d2283f094aa540dd7dd71fd134e56e">Resum i context</h2>
 
 <ul>
 <li><p>La Generalitat de Catalunya, com a administració pública, està obligada a l’acompliment de la normativa d’accessibilitat recollida en la Norma UNE 139803:2012, que és la norma de referència al Reial Decret <sup>1494</sup>&frasl;<sub>2007</sub>, del BOE de 12 de novembre.</p></li>
@@ -318,13 +318,13 @@
 <li><a href="http://www.boe.es/buscar/doc.php?id=BOE-A-2007-19968">Reial Decret <sup>1494</sup>&frasl;<sub>2007</sub>, de 12 de novembre, sobre las condiciones básicas para el acceso de las personas con discapacidad a las tecnologías, productos y servicios relacionados con la sociedad de la información y medios de comunicación social</a></li>
 </ul>
 
-<h2 id="usabilitat">Usabilitat</h2>
+<h2 id="usabilitat:57d2283f094aa540dd7dd71fd134e56e">Usabilitat</h2>
 
 <ul>
 <li><span class="mandatory"></span>Els webs de la Generalitat de Catalunya han de seguir la normativa de presentació recollida al <a href="http://identitatcorporativa.gencat.cat/ca/inici/">Programa d’Identificació Visual de la Generalitat de Catalunya</a>.</li>
 </ul>
 
-<h2 id="portabilitat-i-adaptabilitat">Portabilitat i Adaptabilitat</h2>
+<h2 id="portabilitat-i-adaptabilitat:57d2283f094aa540dd7dd71fd134e56e">Portabilitat i Adaptabilitat</h2>
 
 <ol>
 <li><p><span class="mandatory"></span>Els webs de la Generalitat s’han de desenvolupar seguint els estàndards marcats pel W3C.</p>
@@ -347,7 +347,7 @@
 </code></pre></li>
 </ol>
 
-<h2 id="accessibilitat">Accessibilitat</h2>
+<h2 id="accessibilitat:57d2283f094aa540dd7dd71fd134e56e">Accessibilitat</h2>
 
 <ol>
 <li><p><span class="mandatory"></span>Els webs de la Generalitat han de complir el <strong>nivell doble A (AA)</strong> de les WCAG 2.0.
@@ -357,7 +357,9 @@ Les WCAG 2.0 es referencien a la Norma UNE 139803:2012, que actualitza i substit
 
 <pre><code>        Es recomana la revisió del compliment dels estàndards complementant la revisió manual amb la revisió automàtica que realitzen algunes eines. No es podrà justificar la validesa d’un lliurament de l’aplicació pel sol fet que l’eina no hagi detectat cap disconformitat, sempre s’haurà de justificar el compliment de totes les normes, siguin o no amb una eina. 
 
+
         Es recomana usar el següent conjunt d’eines:
+
 
         * Validador HTML: http://validator.w3.org/
         * Validador CSS: http://jigsaw.w3.org/css-validator/
@@ -370,7 +372,7 @@ Les WCAG 2.0 es referencien a la Norma UNE 139803:2012, que actualitza i substit
 </code></pre></li>
 </ol>
 
-<h2 id="navegadors-compatibles">Navegadors compatibles</h2>
+<h2 id="navegadors-compatibles:57d2283f094aa540dd7dd71fd134e56e">Navegadors compatibles</h2>
 
 <ol>
 <li><p><span class="mandatory"></span>Tot i que s’orientarà el desenvolupament a estàndards, s’ha de comprovar que el desenvolupament funciona correctament amb diversos navegadors i motors de renderització (webkit, gecko, trident, &hellip;), sempre tenint en compte les necessitats del projecte.</p>
@@ -382,6 +384,7 @@ Les WCAG 2.0 es referencien a la Norma UNE 139803:2012, que actualitza i substit
 
 <pre><code>        Com a norma general,  s’ha de garantir com a mínim, la compatibilitat amb els navegadors i versions que compleixin les següents condicions:
 
+
         - Continuen vigents, segons el full de ruta del programari del CTTI i,
         - Es van alliberar durant els últims 2 anys i,
         - La seva quota de mercat és superior al 5%
@@ -390,7 +393,7 @@ Les WCAG 2.0 es referencien a la Norma UNE 139803:2012, que actualitza i substit
 <li><p><span class="choice"></span>Per a projectes orientats a ús intern/intranet, donat que els equips informàtics poden tenir limitacions a l’hora d’actualitzar navegadors, podria ser necessari fer compatible el desenvolupament amb versions obsoletes de navegadors.</p></li>
 </ol>
 
-<h2 id="eficiència">Eficiència</h2>
+<h2 id="eficiència:57d2283f094aa540dd7dd71fd134e56e">Eficiència</h2>
 
 <ol>
 <li><p><span class="recommended"></span>Aprofitar la memòria cau dels navegadors sempre que sigui possible per als recursos estàtics que canvien molt poc sovint, habilitant les capçaleres de servidor web corresponents.
