--- a/gicar-integracio/workflow/index.html
+++ b/gicar-integracio/workflow/index.html
@@ -345,7 +345,7 @@
 
 <p><img src="/related/gicar/esquema-acces2.png" alt="Integració Aplicacions GICAR" /></p>
 
-<h2 id="finalització-de-la-sessió-activa">Finalització de la sessió activa</h2>
+<h2 id="finalització-de-la-sessió-activa:7b3ce5b849b571e162bc8896a9240e7b">Finalització de la sessió activa</h2>
 
 <p>Hi ha dues maneres de terminar una sessió amb GICAR: o bé a través del formulari de logoff específic de GICAR, o bé a partir d’un timeout.</p>
 
