--- a/gicar/descripcio/index.html
+++ b/gicar/descripcio/index.html
@@ -306,7 +306,7 @@
 <ul>
 <li>
 <ul>
-<li><a href="#esquema-general-de-gicar">Esquema general de GICAR</a></li>
+<li><a href="#esquema-general-de-gicar:de9531194e60e8df5028e912727989be">Esquema general de GICAR</a></li>
 </ul></li>
 </ul></li>
 </ul>
@@ -343,7 +343,7 @@
 <p>Es important remarcar que el Directori Corporatiu és el dipòsit central d’identitats de GICAR i que, per tant, és requisit indispensable estar al Directori Corporatiu per poder gaudir de tots els serveis i funcionalitats que aporta la plataforma.</p></li>
 </ol>
 
-<h3 id="esquema-general-de-gicar">Esquema general de GICAR</h3>
+<h3 id="esquema-general-de-gicar:de9531194e60e8df5028e912727989be">Esquema general de GICAR</h3>
 
 <p>Per facilitar la comprensió de la plataforma de Gestió d’Identitats, s’inclou a continuació un esquema de l’arquitectura de capes que configuren la plataforma GICAR.</p>
 
