--- a/gicar/provisio-recursos/index.html
+++ b/gicar/provisio-recursos/index.html
@@ -317,7 +317,7 @@
 <li><p><strong>Sincronització de Contrasenyes</strong>: eina de la plataforma GICAR que permet sincronitzar la contrasenya d’un recurs/ directori amb la contrasenya del Directori Corporatiu. Es tracta d’un mecanisme bidireccional.</p></li>
 </ol>
 
-<h2 id="arquitectura-i-elements-pel-control-d-accés-a-recursos">Arquitectura i elements pel Control d’Accés a Recursos.</h2>
+<h2 id="arquitectura-i-elements-pel-control-d-accés-a-recursos:24316e33b02d5e7051b1b527dbef6ac1">Arquitectura i elements pel Control d’Accés a Recursos.</h2>
 
 <p>En el següent esquema s’inclouen els diferents elements de la plataforma GICAR que intervenen en la gestió del control d’accés a recursos:</p>
 
@@ -399,7 +399,7 @@
 <li><p>Recursos Finals: recursos gestionats per OIM. OIM té la capacitat de connectar-se a aquests recursos per aprovisionar o eliminar comptes d’usuari, així com per validar la integritat de la informació entre OIM i el recurs final (procés de reconciliació).</p></li>
 </ol>
 
-<h2 id="tipus-d-aprovisionament">Tipus d&rsquo;aprovisionament</h2>
+<h2 id="tipus-d-aprovisionament:24316e33b02d5e7051b1b527dbef6ac1">Tipus d&rsquo;aprovisionament</h2>
 
 <p>Tal i com s’ha indicat, l’aprovisionament és l’acció de crear comptes d’usuari en els recursos finals. D’igual forma, el deprovisionament és l’acció d’eliminar comptes d’usuari en els recursos prèviament aprovisionats.</p>
 
@@ -415,7 +415,7 @@
 
 <p><img src="/related/gicar/modes-aprov.png" style="width:75%" /></p>
 
-<h2 id="fases-per-donar-accés-a-un-recurs">Fases per donar accés a un recurs</h2>
+<h2 id="fases-per-donar-accés-a-un-recurs:24316e33b02d5e7051b1b527dbef6ac1">Fases per donar accés a un recurs</h2>
 
 <p>Un cop descrites les eines que formen part de la Plataforma GICAR per gestionar els recursos als que té accés una identitat, es descriu a continuació el procés que es segueix (des de l’inici) per donar accés a una identitat a un recurs:</p>
 
