--- a/noticies/2015-05-29-SIC-Upgrade-SVN/index.html
+++ b/noticies/2015-05-29-SIC-Upgrade-SVN/index.html
@@ -342,7 +342,7 @@
 
 <p>Trobareu més detall dels canvis a la pàgina oficial de les <a href="https://subversion.apache.org/docs/release-notes/1.8.html">Release Notes de la versió 1.8 de Subversion</a>.</p>
 
-<h4 id="compatibilitat-amb-clients-svn-1-8">Compatibilitat amb clients SVN &lt; 1.8</h4>
+<h4 id="compatibilitat-amb-clients-svn-1-8:e4ebcf1ee7b7b7e55cefe6902b23404f">Compatibilitat amb clients SVN &lt; 1.8</h4>
 
 <p>Es recomana a aquells usuaris de SIC que continuen treballant amb un client anterior a la 1.8.X que s&rsquo;actualitzin també a aquesta versió per tal que puguin aprofitar al màxim les millores que introduirà aquesta versió.</p>
 
