--- a/noticies/2015-10-27-Canigo-Adaptacio-al-PIV/index.html
+++ b/noticies/2015-10-27-Canigo-Adaptacio-al-PIV/index.html
@@ -308,7 +308,7 @@
 
 <p>L&rsquo;adaptació al <a href="http://www.gencat.cat/web/guies/estil/">PIV (Programa d&rsquo;Identificació Visual) de la Generalitat de Catalunya</a> és un requeriment per a moltes aplicacions web construïdes amb Canigó. L&rsquo;estratègia a seguir per a aquestes aplicacions depèn de la versió en què estigui implementada.</p>
 
-<h3 id="aplicacions-ja-desenvolupades-amb-canigó-2-i-canigó-3">Aplicacions ja desenvolupades amb Canigó 2 i Canigó 3</h3>
+<h3 id="aplicacions-ja-desenvolupades-amb-canigó-2-i-canigó-3:61c5747f9d97152fc4b008acc290831d">Aplicacions ja desenvolupades amb Canigó 2 i Canigó 3</h3>
 
 <ul>
 <li><p><strong>Millor opció</strong>:</p>
@@ -332,7 +332,7 @@
 </ul></li>
 </ul>
 
-<h3 id="noves-aplicacions-canigó-3">Noves aplicacions Canigó 3</h3>
+<h3 id="noves-aplicacions-canigó-3:61c5747f9d97152fc4b008acc290831d">Noves aplicacions Canigó 3</h3>
 
 <ul>
 <li><p><strong>Recomanació</strong>:</p>
