--- a/noticies/2016-03-31-SIC-Desplegament-de-sites-statics-al-cloud/index.html
+++ b/noticies/2016-03-31-SIC-Desplegament-de-sites-statics-al-cloud/index.html
@@ -310,7 +310,7 @@
 
 <p>El SIC ha publicat una nova versió del <em>Formulari d’alta d’aplicació per al Portal d’Integració Contínua (Tasques al Jenkins)</em> que podeu trobar a <a href="http://canigo.ctti.gencat.cat/sic-documentacio/formularis/">la plana de Formularis del SIC del Portal</a>. És mitjançant aquest formulari que es pot sol·licitar aquest nou tipus de desplegaments. Veureu que s’ha creat un nou apartat &ldquo;Web estàtiques&rdquo; per aplicacions d&rsquo;aquest tipus.</p>
 
-<h3 id="sites-estàtics-a-bluemix">Sites estàtics a Bluemix</h3>
+<h3 id="sites-estàtics-a-bluemix:e3e499c96329d361140814bc10b866f0">Sites estàtics a Bluemix</h3>
 
 <p>Val a dir que, com a primera aproximació a aquest nou escenari, el SIC ha decidit limitar-se al desplegament de sites estàtics a Bluemix, la solució Cloud d&rsquo;IBM.</p>
 
@@ -318,7 +318,7 @@
 
 <p><center><img src="/images/news/sites_estatics_Bluemix.png" alt="sites_estatics_Bluemix.png" /></center></p>
 
-<h3 id="jobs-de-jenkins">Jobs de Jenkins</h3>
+<h3 id="jobs-de-jenkins:e3e499c96329d361140814bc10b866f0">Jobs de Jenkins</h3>
 
 <p>En principi, cada aplicació web estàtica al Bluemix requerirà la creació de tres jobs de jenkins:</p>
 
@@ -328,7 +328,7 @@
 <li><strong>Job de tipus PRO</strong>: s&rsquo;encarregarà de desplegar l&rsquo;artefacte construït de forma satisfactòria en l&rsquo;anterior entorn utilitzant l&rsquo;arxiu de manifest per a aquest entorn.</li>
 </ul>
 
-<h3 id="properes-passes">Properes passes</h3>
+<h3 id="properes-passes:e3e499c96329d361140814bc10b866f0">Properes passes</h3>
 
 <p>En futures ampliacions del servei, es pretén donar suport a múltiples tipologies d&rsquo;aplicació així com a múltiples proveïdors d&rsquo;infrastructura al núvol.</p>
 
