--- a/noticies/2016-04-14-Canigo-Administracio-Logs/index.html
+++ b/noticies/2016-04-14-Canigo-Administracio-Logs/index.html
@@ -310,27 +310,27 @@
 
 <p>Aquest mòdul &ldquo;canigo.operation.logging&rdquo; ofereix les següents funcionalitats:</p>
 
-<h3 id="funcionalitats">Funcionalitats</h3>
+<h3 id="funcionalitats:3643d221bb9aef7a846843cf1c12f14c">Funcionalitats</h3>
 
-<h4 id="canviar-en-calent-el-nivell-de-log-dels-diferents-paquets-de-l-aplicació">Canviar en calent el nivell de log dels diferents paquets de l&rsquo;aplicació</h4>
+<h4 id="canviar-en-calent-el-nivell-de-log-dels-diferents-paquets-de-l-aplicació:3643d221bb9aef7a846843cf1c12f14c">Canviar en calent el nivell de log dels diferents paquets de l&rsquo;aplicació</h4>
 
 <p><center><img src="/images/news/configuracioNivellLogs.PNG" alt="configuracioNivellLog.PNG" /></center></p>
 
-<h4 id="visualització-de-fitxers-de-logs-en-temps-real-mitjançant-streaming-amb-websockets">Visualització de fitxers de logs en temps real mitjançant streaming amb WebSockets</h4>
+<h4 id="visualització-de-fitxers-de-logs-en-temps-real-mitjançant-streaming-amb-websockets:3643d221bb9aef7a846843cf1c12f14c">Visualització de fitxers de logs en temps real mitjançant streaming amb WebSockets</h4>
 
 <p><center><img src="/images/news/VisualitzacioLogs.PNG" alt="visualitzacioLogs.PNG" /></center></p>
 
-<h4 id="descarregar-els-fitxers-de-logs">Descarregar els fitxers de logs</h4>
+<h4 id="descarregar-els-fitxers-de-logs:3643d221bb9aef7a846843cf1c12f14c">Descarregar els fitxers de logs</h4>
 
 <p><center><img src="/images/news/descarregaLogs.png" alt="descarregaLogs.PNG" /></center></p>
 
-<h3 id="plugin-canigó-per-eclipse">Plugin Canigó per Eclipse</h3>
+<h3 id="plugin-canigó-per-eclipse:3643d221bb9aef7a846843cf1c12f14c">Plugin Canigó per Eclipse</h3>
 
 <p>També s&rsquo;ha publicat la versió 1.5.1 del <a href="/related/canigo/howto/Canigo - HowTo - Generacio aplicacio Canigo 3.1 amb plugin Eclipse.pdf">Plugin de Canigó per Eclipse</a> el qual inclou la possibilitat d&rsquo;afegir/eliminar aquest mòdul a una aplicació Canigó 3.1.</p>
 
 <p>Amb el Plugin de Canigó per Eclipse, en cas de crear una aplicació amb arquitectura REST+HTML5/JS el mòdul d&rsquo;administració de logs ja ve inclòs per defecte.</p>
 
-<h3 id="aplicació-demo">Aplicació Demo</h3>
+<h3 id="aplicació-demo:3643d221bb9aef7a846843cf1c12f14c">Aplicació Demo</h3>
 
 <p>Des del CS Canigó es proporciona una <a href="http://canigo-admin-logs.eu-gb.mybluemix.net/loggingAdministration.html">demo online</a> d&rsquo;aquest nou mòdul. El codi font de la demo es troba disponible a <a href="https://github.com/cs-canigo/demoAdminLogs">Github</a>.</p>
 
