--- a/sic-documentacio/formularis/index.html
+++ b/sic-documentacio/formularis/index.html
@@ -315,7 +315,7 @@
 
 						
 
-<h3 id="formularis">Formularis</h3>
+<h3 id="formularis:4d51b0da55def8340ba340fa1f30253b">Formularis</h3>
 
 <ul>
 <li><p><a href="/related/sic/SIC-Formulari-Gestio-usuaris.xlsx">Formulari Gestió d&rsquo;usuaris al SIC</a><br />
