--- a/sic-documentacio/manuals/index.html
+++ b/sic-documentacio/manuals/index.html
@@ -315,7 +315,7 @@
 
 						
 
-<h3 id="manuals">Manuals</h3>
+<h3 id="manuals:cacc2d7187f2d97f515a9e1bec5a0a3e">Manuals</h3>
 
 <ul>
 <li><a href="/related/sic/manual-usuari.pdf">Manual d&rsquo;Usuari</a></li>
