--- a/sic-related/nou-model-tic/index.html
+++ b/sic-related/nou-model-tic/index.html
@@ -306,7 +306,7 @@
 
 						
 
-<h3 id="nou-model-tic-al-sic">Nou model TIC al SIC</h3>
+<h3 id="nou-model-tic-al-sic:7cd82ff7021c4205f0ef45e16840a38e">Nou model TIC al SIC</h3>
 
 <p>La implantació del nou model TIC al SIC ha consistit en:</p>
 
@@ -317,7 +317,7 @@
 <li>Homogeneïtzació de la llista dels d&rsquo;àmbits al que poden pertanyen les aplicacions.</li>
 </ul>
 
-<h2 id="nous-grups-de-permisos">Nous grups de permisos</h2>
+<h2 id="nous-grups-de-permisos:7cd82ff7021c4205f0ef45e16840a38e">Nous grups de permisos</h2>
 
 <p>A continuació s&rsquo;enumeren els grups de permisos LDAP disponibles per accedir als repositoris de codi font/Portal d&rsquo;Integració Contínua del SIC:</p>
 
@@ -333,7 +333,7 @@ El grup s&rsquo;integra amb les persones sol- licitades per CTTI, aquesta sol- l
 El grup s&rsquo;integra amb les persones sol- licitades per CTTI, aquesta sol- licitud es realitzarà com una petició estàndard al SIC.</li>
 </ul>
 
-<h2 id="llistat-d-àmbits-disponibles">Llistat d&rsquo;àmbits disponibles</h2>
+<h2 id="llistat-d-àmbits-disponibles:7cd82ff7021c4205f0ef45e16840a38e">Llistat d&rsquo;àmbits disponibles</h2>
 
 <table>
 <thead>
@@ -496,7 +496,7 @@ El grup s&rsquo;integra amb les persones sol- licitades per CTTI, aquesta sol- l
 </tbody>
 </table>
 
-<h2 id="repositoris-de-codi-que-ja-es-troben-creats-de-forma-massiva">Repositoris de codi que ja es troben creats de forma massiva</h2>
+<h2 id="repositoris-de-codi-que-ja-es-troben-creats-de-forma-massiva:7cd82ff7021c4205f0ef45e16840a38e">Repositoris de codi que ja es troben creats de forma massiva</h2>
 
 <p>L&rsquo;equip de SIC en data 10-9-2014 va realitzar la creació massiva de repositoris de codi per a les aplicacions que figuren en aquest <a href="/related/sic/Inventari_SIC_140910.xlsx">Inventari d&rsquo;Aplicacions</a>.</p>
 
