--- a/sic-related/procediment/index.html
+++ b/sic-related/procediment/index.html
@@ -306,7 +306,7 @@
 
 						
 
-<h3 id="procediment-d-alta-d-aplicacions-sense-codi-de-diàleg-al-sic">Procediment d&rsquo;alta d&rsquo;aplicacions sense codi de diàleg al SIC</h3>
+<h3 id="procediment-d-alta-d-aplicacions-sense-codi-de-diàleg-al-sic:05976d1f36fdb0b1072463f48f4418c9">Procediment d&rsquo;alta d&rsquo;aplicacions sense codi de diàleg al SIC</h3>
 
 <p>Per aquelles aplicacions que no estan donades d&rsquo;alta a l&rsquo;Inventari d&rsquo;Aplicacions de Gestió de Serveis cal tramitar aquesta alta prèviament a poder incorporar-la al SIC. D&rsquo;aquesta manera se li assignarà un codi de diàleg, dada requerida al formulari d&rsquo;alta d&rsquo;aplicacions al SIC, tan si únicament es vol Custodia de Codi com si també es desitja la Construcció i Desplegament de l&rsquo;aplicació a un CPD Corporatiu.</p>
 
