--- a/canigo-documentacio-versions-3x-integracio/modul-enotum-ws/index.html
+++ b/canigo-documentacio-versions-3x-integracio/modul-enotum-ws/index.html
@@ -320,11 +320,11 @@
 
 						
 
-<h2 id="propòsit">Propòsit</h2>
+<h2 id="propòsit:94dc0f0c0ac99f25ff6339b5e1f16a17">Propòsit</h2>
 
 <p>El propòsit d&rsquo;aquesta documentació és donar a conèixer el mòdul de WebServices de Canigó3 per Enotum, la seva configuració i el seu ús per part de les aplicacions.</p>
 
-<h2 id="descripció-detallada">Descripció Detallada</h2>
+<h2 id="descripció-detallada:94dc0f0c0ac99f25ff6339b5e1f16a17">Descripció Detallada</h2>
 
 <p>El Servei de Enotum existeixen dues modalitats de consum especials:</p>
 
@@ -337,9 +337,9 @@
 
 <p>Ambdues necessiten la publicació d&rsquo;un WebService per part del consumidor del Servei (BO).</p>
 
-<h2 id="instal-lació-i-configuració">Instal.lació i Configuració</h2>
+<h2 id="instal-lació-i-configuració:94dc0f0c0ac99f25ff6339b5e1f16a17">Instal.lació i Configuració</h2>
 
-<h3 id="instal-lació">Instal.lació</h3>
+<h3 id="instal-lació:94dc0f0c0ac99f25ff6339b5e1f16a17">Instal.lació</h3>
 
 <p>Per instal.lar el WebService de notificacions electròniques s&rsquo;han d&rsquo;afegir manualment en el pom.xml de l&rsquo;aplicació la següent dependència:</p>
 
@@ -360,7 +360,7 @@
 &lt;/repository&gt;
 </code></pre>
 
-<h3 id="configuració">Configuració</h3>
+<h3 id="configuració:94dc0f0c0ac99f25ff6339b5e1f16a17">Configuració</h3>
 
 <p>La configuració del WS es porta a terme a través de l&rsquo;arxiu &ldquo;app-custom-enotumWS.xml&rdquo;. Es recomana que es posi en src/main/resources/spring/app-custom-enotumWS.xml.</p>
 
@@ -416,7 +416,7 @@
     &lt;/bean&gt;
 </code></pre>
 
-<h2 id="utilització-del-web-service">Utilització del Web Service</h2>
+<h2 id="utilització-del-web-service:94dc0f0c0ac99f25ff6339b5e1f16a17">Utilització del Web Service</h2>
 
 <p>Per poder utilitzar el WebService de Enotum en una aplicació Canigó3 s&rsquo;han de seguir els següents passos;</p>
 
