--- a/canigo-documentacio-versions-3x-suport/modul-correu/index.html
+++ b/canigo-documentacio-versions-3x-suport/modul-correu/index.html
@@ -320,7 +320,7 @@
 
 						
 
-<h2 id="propòsit">Propòsit</h2>
+<h2 id="propòsit:9c86c43cf25cda9d25a004ea86efcd88">Propòsit</h2>
 
 <p>Aquest mòdul té com a objectiu permetre l&rsquo;enviament de correus electrònics a una o diverses adreces especificades a qualsevol dels següents recipients:</p>
 
@@ -334,9 +334,9 @@
 
 <p>Versions i Dependències</p>
 
-<h2 id="instal-lació-i-configuració">Instal.lació i Configuració</h2>
+<h2 id="instal-lació-i-configuració:9c86c43cf25cda9d25a004ea86efcd88">Instal.lació i Configuració</h2>
 
-<h3 id="instal-lació">Instal.lació</h3>
+<h3 id="instal-lació:9c86c43cf25cda9d25a004ea86efcd88">Instal.lació</h3>
 
 <p>Per tal d&rsquo;instal-lar el mòdul d&rsquo;enviament de correu es pot incloure automàticament a través de l&rsquo;eina de suport al desenvolupament o bé afegir manualment en el pom.xml de l&rsquo;aplicació la següent dependència:</p>
 
@@ -349,7 +349,7 @@
 &lt;/dependency&gt;
 </code></pre>
 
-<h3 id="configuració">Configuració</h3>
+<h3 id="configuració:9c86c43cf25cda9d25a004ea86efcd88">Configuració</h3>
 
 <p>La configuració es realitza automàticament a partir de la eina de suport al desenvolupament.</p>
 
@@ -439,9 +439,9 @@
 
 <p>que es recomana declarar en l&rsquo;arxiu app-support-mailing.xml que s&rsquo;ha de situar en /src/main/resources/spring/</p>
 
-<h2 id="utilització-del-mòdul">Utilització del Mòdul</h2>
+<h2 id="utilització-del-mòdul:9c86c43cf25cda9d25a004ea86efcd88">Utilització del Mòdul</h2>
 
-<h3 id="jsf">JSF</h3>
+<h3 id="jsf:9c86c43cf25cda9d25a004ea86efcd88">JSF</h3>
 
 <p>Per a utilitzar aquest mòdul, cal crear un bean i una jsf:</p>
 
@@ -652,7 +652,7 @@ client=&quot;true&quot;/&gt;
 &lt;/html&gt;
 </code></pre>
 
-<h3 id="struts-taglibs">STRUTS+TAGLIBS</h3>
+<h3 id="struts-taglibs:9c86c43cf25cda9d25a004ea86efcd88">STRUTS+TAGLIBS</h3>
 
 <p>Per a utilitzar el mòdul cal crear el fitxer de configuració una Acció i una JSP:</p>
 
