--- a/documentacio/shibboleth/index.html
+++ b/documentacio/shibboleth/index.html
@@ -315,7 +315,7 @@
 
 </div>
 
-<h2 id="objectiu">Objectiu</h2>
+<h2 id="objectiu:faaab2b5bd7baacad04c6139304d5e40">Objectiu</h2>
 
 <ul>
 <li><p>Donar una resposta a l&rsquo;autenticació d&rsquo;aplicacions a Cloud Públic, que s&rsquo;integri amb l&rsquo;Active Directori Corporatiu</p></li>
@@ -323,14 +323,14 @@
 <li><p>Tecnològicament s&rsquo;opta per containeritzar la solució, per facilitat de la configuració, proves i portabilitat de la solució</p></li>
 </ul>
 
-<h2 id="imatges-utilitzades">Imatges utilitzades:</h2>
+<h2 id="imatges-utilitzades:faaab2b5bd7baacad04c6139304d5e40">Imatges utilitzades:</h2>
 
 <ul>
 <li>Docker Identity Provider - IdP (servidor): <a href="https://github.com/jtgasper3/docker-shibboleth-idp">https://github.com/jtgasper3/docker-shibboleth-idp</a></li>
 <li>Docker Service Provider - SP (client): <a href="https://hub.docker.com/r/jtgasper3/centos-shibboleth-sp/">https://hub.docker.com/r/jtgasper3/centos-shibboleth-sp/</a></li>
 </ul>
 
-<h2 id="idp-identity-provider-servidor">IdP - Identity Provider (servidor)</h2>
+<h2 id="idp-identity-provider-servidor:faaab2b5bd7baacad04c6139304d5e40">IdP - Identity Provider (servidor)</h2>
 
 <ol>
 <li><p>Construcció de la imatge a partir del projecte anterior:</p>
@@ -398,11 +398,13 @@ $ docker exec shibboleth-idp cp -R /opt/shibboleth-idp/webapp/ /external-mount
     &lt;resolver:AttributeEncoder xsi:type=&quot;enc:SAML2String&quot; name=&quot;urn:oid:0.9.2342.19200300.100.1.1&quot; friendlyName=&quot;employeeId&quot; encodeType=&quot;false&quot; /&gt;
 &lt;/resolver:AttributeDefinition&gt;
 
+
 &lt;resolver:AttributeDefinition id=&quot;mail&quot; xsi:type=&quot;ad:Simple&quot; sourceAttributeID=&quot;mail&quot;&gt;
     &lt;resolver:Dependency ref=&quot;myLDAP&quot; /&gt;
     &lt;resolver:AttributeEncoder xsi:type=&quot;enc:SAML1String&quot; name=&quot;urn:mace:dir:attribute-def:mail&quot; encodeType=&quot;false&quot; /&gt;
     &lt;resolver:AttributeEncoder xsi:type=&quot;enc:SAML2String&quot; name=&quot;urn:oid:0.9.2342.19200300.100.1.3&quot; friendlyName=&quot;mail&quot; encodeType=&quot;false&quot; /&gt;
 &lt;/resolver:AttributeDefinition&gt;
+
 
 &lt;resolver:AttributeDefinition id=&quot;CODIINTERN&quot; xsi:type=&quot;ad:Simple&quot; sourceAttributeID=&quot;sAMAccountName&quot;&gt;
     &lt;resolver:Dependency ref=&quot;myLDAP&quot; /&gt;
@@ -410,17 +412,20 @@ $ docker exec shibboleth-idp cp -R /opt/shibboleth-idp/webapp/ /external-mount
     &lt;resolver:AttributeEncoder xsi:type=&quot;enc:SAML2String&quot; name=&quot;urn:oid:0.9.2342.19200300.100.1.99&quot; friendlyName=&quot;CODIINTERN&quot; encodeType=&quot;false&quot; /&gt;
 &lt;/resolver:AttributeDefinition&gt;
 
+
 &lt;resolver:AttributeDefinition id=&quot;UNITAT_MAJOR&quot; xsi:type=&quot;ad:Simple&quot; sourceAttributeID=&quot;department&quot;&gt;
     &lt;resolver:Dependency ref=&quot;myLDAP&quot; /&gt;
     &lt;resolver:AttributeEncoder xsi:type=&quot;enc:SAML1String&quot; name=&quot;urn:mace:dir:attribute-def:department&quot; encodeType=&quot;false&quot; /&gt;
     &lt;resolver:AttributeEncoder xsi:type=&quot;enc:SAML2String&quot; name=&quot;urn:oid:0.9.2342.19200300.100.1.2&quot; friendlyName=&quot;UNITAT_MAJOR&quot; encodeType=&quot;false&quot; /&gt;
 &lt;/resolver:AttributeDefinition&gt;
 
+
 &lt;resolver:AttributeDefinition id=&quot;UNITAT_MENOR&quot; xsi:type=&quot;ad:Simple&quot; sourceAttributeID=&quot;company&quot;&gt;
     &lt;resolver:Dependency ref=&quot;myLDAP&quot; /&gt;
     &lt;resolver:AttributeEncoder xsi:type=&quot;enc:SAML1String&quot; name=&quot;urn:mace:dir:attribute-def:company&quot; encodeType=&quot;false&quot; /&gt;
     &lt;resolver:AttributeEncoder xsi:type=&quot;enc:SAML2String&quot; name=&quot;urn:oid:0.9.2342.19200300.100.1.98&quot; friendlyName=&quot;UNITAT_MENOR&quot; encodeType=&quot;false&quot; /&gt;
 &lt;/resolver:AttributeDefinition&gt;
+
 
 &lt;resolver:AttributeDefinition id=&quot;GICAR&quot; xsi:type=&quot;ad:Template&quot;&gt;
     &lt;resolver:Dependency ref=&quot;employeeId&quot; /&gt;
@@ -441,9 +446,11 @@ $ docker exec shibboleth-idp cp -R /opt/shibboleth-idp/webapp/ /external-mount
     &lt;ad:SourceAttribute&gt;UNITAT_MENOR&lt;/ad:SourceAttribute&gt;
 &lt;/resolver:AttributeDefinition&gt;
 
+
 &lt;!-- ========================================== --&gt;
 &lt;!--      Data Connectors                       --&gt;
 &lt;!-- ========================================== --&gt;
+
 
 &lt;resolver:DataConnector id=&quot;myLDAP&quot; xsi:type=&quot;dc:LDAPDirectory&quot;
         ldapURL=&quot;%{idp.attribute.resolver.LDAP.ldapURL}&quot;
@@ -463,13 +470,16 @@ $ docker exec shibboleth-idp cp -R /opt/shibboleth-idp/webapp/ /external-mount
 
 <pre><code>idp.authn.LDAP.authenticator                   = bindSearchAuthenticator
 
+
 --------
 idp.authn.LDAP.ldapURL                          = ldap://192.168.119.14:389
 idp.authn.LDAP.useStartTLS                     = false
 idp.authn.LDAP.useSSL                          = false
 --------
 
+
 ó
+
 
 --------
 idp.authn.LDAP.ldapURL                          = ldaps://wndca08.prepdc.gencat.intranet:636 --&gt; 
@@ -477,7 +487,9 @@ idp.authn.LDAP.useStartTLS                     = false
 idp.authn.LDAP.useSSL                          = true
 --------
 
+
 #idp.authn.LDAP.connectTimeout                  = 3000
+
 
 idp.authn.LDAP.sslConfig                       = certificateTrust
 idp.authn.LDAP.trustCertificates                = %{idp.home}/credentials/ldap-server.crt --&gt; s'hauria de posar la ruta del certificat del ldap si estem anant per SSL
@@ -485,14 +497,18 @@ idp.authn.LDAP.trustCertificates                = %{idp.home}/credentials/ldap-s
                                                                                               en la creació de la imatge    
 idp.authn.LDAP.trustStore                       = %{idp.home}/credentials/ldap-server.truststore
 
+
 idp.authn.LDAP.returnAttributes                 = employeeId
+
 
 idp.authn.LDAP.baseDN                           = ou=Persones,ou=DIRECTORI,dc=prepdc,dc=gencat,dc=intranet
 idp.authn.LDAP.userFilter                       = (employeeId={user})
 idp.authn.LDAP.bindDN                           = SMAdmin@prepdc.gencat.intranet
 idp.authn.LDAP.bindDNCredential                 = ********************************************
 
+
 idp.authn.LDAP.dnFormat                         = %s@prepdc.gencat.intranet
+
 
 idp.attribute.resolver.LDAP.ldapURL             = %{idp.authn.LDAP.ldapURL}
 idp.attribute.resolver.LDAP.baseDN              = %{idp.authn.LDAP.baseDN}
@@ -501,6 +517,7 @@ idp.attribute.resolver.LDAP.bindDNCredential    = %{idp.authn.LDAP.bindDNCredent
 #idp.attribute.resolver.LDAP.useStartTLS         = %{idp.authn.LDAP.useStartTLS:true}
 #idp.attribute.resolver.LDAP.trustCertificates   = %{idp.authn.LDAP.trustCertificates}
 idp.attribute.resolver.LDAP.searchFilter        = (employeeId=$requestContext.principalName)
+
 
 #idp.pool.LDAP.minSize                          = 3
 #idp.pool.LDAP.maxSize                          = 10
@@ -520,29 +537,36 @@ idp.attribute.resolver.LDAP.searchFilter        = (employeeId=$requestContext.pr
 <pre><code>    &lt;afp:AttributeFilterPolicy id=&quot;gencat_attrib_policy&quot;&gt;
         &lt;afp:PolicyRequirementRule xsi:type=&quot;basic:ANY&quot; /&gt;
 
+
         &lt;afp:AttributeRule attributeID=&quot;employeeId&quot;&gt;
             &lt;afp:PermitValueRule xsi:type=&quot;basic:ANY&quot; /&gt;
         &lt;/afp:AttributeRule&gt;
+
 
         &lt;afp:AttributeRule attributeID=&quot;mail&quot;&gt;
             &lt;afp:PermitValueRule xsi:type=&quot;basic:ANY&quot; /&gt;
         &lt;/afp:AttributeRule&gt;
 
+
         &lt;afp:AttributeRule attributeID=&quot;CODIINTERN&quot;&gt;
             &lt;afp:PermitValueRule xsi:type=&quot;basic:ANY&quot; /&gt;
         &lt;/afp:AttributeRule&gt;
+
 
         &lt;afp:AttributeRule attributeID=&quot;UNITAT_MAJOR&quot;&gt;
             &lt;afp:PermitValueRule xsi:type=&quot;basic:ANY&quot; /&gt;
         &lt;/afp:AttributeRule&gt;
 
+
         &lt;afp:AttributeRule attributeID=&quot;UNITAT_MENOR&quot;&gt;
             &lt;afp:PermitValueRule xsi:type=&quot;basic:ANY&quot; /&gt;
         &lt;/afp:AttributeRule&gt;
 
+
         &lt;afp:AttributeRule attributeID=&quot;GICAR&quot;&gt;
             &lt;afp:PermitValueRule xsi:type=&quot;basic:ANY&quot; /&gt;
         &lt;/afp:AttributeRule&gt;
+
 
     &lt;/afp:AttributeFilterPolicy&gt;
 </code></pre></li>
@@ -574,7 +598,7 @@ idp.attribute.resolver.LDAP.searchFilter        = (employeeId=$requestContext.pr
 </ol></li>
 </ol>
 
-<h2 id="sp-service-provider-client-apache">SP - Service Provider (client Apache)</h2>
+<h2 id="sp-service-provider-client-apache:faaab2b5bd7baacad04c6139304d5e40">SP - Service Provider (client Apache)</h2>
 
 <ol>
 <li><p>Construcció de la imatge a partir del projecte:</p>
@@ -628,17 +652,22 @@ $ docker exec shibboleth-sp cp /etc/shibboleth/attribute-map.xml /tmp
 <pre><code>&lt;Attribute name=&quot;urn:mace:dir:attribute-def:employeeId&quot; id=&quot;GICAR_ID&quot; /&gt;
 &lt;Attribute name=&quot;urn:oid:0.9.2342.19200300.100.1.1&quot; id=&quot;GICAR_ID&quot; /&gt;
 
+
 &lt;Attribute name=&quot;urn:mace:dir:attribute-def:mail&quot; id=&quot;mail&quot; /&gt;
 &lt;Attribute name=&quot;urn:oid:0.9.2342.19200300.100.1.3&quot; id=&quot;mail&quot; /&gt;
+
 
 &lt;Attribute name=&quot;urn:mace:dir:attribute-def:sAMAccountName&quot; id=&quot;CODIINTERN&quot; /&gt;
 &lt;Attribute name=&quot;urn:oid:0.9.2342.19200300.100.1.99&quot; id=&quot;CODIINTERN&quot; /&gt;
 
+
 &lt;Attribute name=&quot;urn:mace:dir:attribute-def:department&quot; id=&quot;UNITAT_MAJOR&quot; /&gt;
 &lt;Attribute name=&quot;urn:oid:0.9.2342.19200300.100.1.2&quot; id=&quot;UNITAT_MAJOR&quot; /&gt;
 
+
 &lt;Attribute name=&quot;urn:mace:dir:attribute-def:company&quot; id=&quot;UNITAT_MENOR&quot; /&gt;
 &lt;Attribute name=&quot;urn:oid:0.9.2342.19200300.100.1.98&quot; id=&quot;UNITAT_MENOR&quot; /&gt;
+
 
 &lt;Attribute name=&quot;https://gencat.cat/GICAR&quot; id=&quot;GICAR&quot; /&gt;
 </code></pre></li>
@@ -654,7 +683,7 @@ $ docker exec shibboleth-sp cp /etc/shibboleth/attribute-map.xml /tmp
 <li><p>El fitxer recuperat, s&rsquo;hauria d&rsquo;afegir al fitxer complet de metadata que recupera l&rsquo;IDP.</p></li>
 </ol>
 
-<h2 id="tips-and-tricks">Tips and tricks</h2>
+<h2 id="tips-and-tricks:faaab2b5bd7baacad04c6139304d5e40">Tips and tricks</h2>
 
 <ol>
 <li><p>Configurar els contenidors amb un DNS. En arrencar contenidors de prova</p>
@@ -667,7 +696,7 @@ $ docker exec shibboleth-sp cp /etc/shibboleth/attribute-map.xml /tmp
 <li><p>Exemple de fitxer de metadata complet, amb el idp-metadata i dos sp-metadata: <a href="https://dl.dropboxusercontent.com/u/17397489/idp/metadata.xml">https://dl.dropboxusercontent.com/u/17397489/idp/metadata.xml</a></p></li>
 </ol>
 
-<h2 id="todo">TODO</h2>
+<h2 id="todo:faaab2b5bd7baacad04c6139304d5e40">TODO</h2>
 
 <ol>
 <li><p>Modificar l&rsquo;interval de refresc del fitxer configurat a IDP/conf/metadata-providers.xml</p></li>
