--- a/gicar-integracio/auth-anonima/index.html
+++ b/gicar-integracio/auth-anonima/index.html
@@ -318,8 +318,7 @@
 <p>Hi ha la possibilitat d’indicar a GICAR que, per una aplicació en concret, permeti, amb certificat digital, l’accés a usuaris que no pertanyin al Directori Corporatiu de la Generalitat. Això s’aconsegueix protegint el recurs en qüestió amb l’esquema d’autenticació anònima.</p>
 
 <ul>
-<li>Descripció del procés d’autenticació utilitzant l’esquema d’autenticació anònima.
-<br /></li>
+<li>Descripció del procés d’autenticació utilitzant l’esquema d’autenticació anònima.</li>
 </ul>
 
 <p>El procés que segueix GICAR per a autenticar usuaris és el que s’indica en el següent esquema:</p>
@@ -337,6 +336,7 @@
 
 <pre><code>HTTP_GICAR (conté les dades de l’usuari al DC) = “CODIINTERN=NRDRJN0001;NIF=11112222W;EMAIL=mail.admin@gencat.net;UNITAT_MAJOR=CTTI;UNITAT_MENOR=CTTI Qualitat”
 
+
 HTTP_GICAR_ID (conté el NIF de l’usuari al DC) --&gt; 11112222W
 </code></pre></li>
 
@@ -346,11 +346,15 @@ HTTP_GICAR_ID (conté el NIF de l’usuari al DC) --&gt; 11112222W
 
 <pre><code>HTTP_GICAR (conté les dades de l’usuari al DC) = “CODIINTERN=NRDRJN0001;NIF=11112222W;EMAIL=mail.admin@gencat.net;UNITAT_MAJOR=CTTI;UNITAT_MENOR=CTTI Qualitat”
 
+
 HTTP_GICAR_ID (conté el NIF de l’usuari) --&gt; 11112222W
+
 
 De forma opcional i sota petició es podran sol·licitar les següents capçaleres:
 
+
 HTTP_GICAR_CERT (conté el classification level, el issuer, el subject, i el OID del certificat)  --&gt; CLASIFICATIONLEVEL=4;CERTISSUER=C=ES, O=Agencia Catalana de Certificacio (NIF Q-0801176-I), L=Passatge de la Concepcio 11 08008 Barcelona, OU=Serveis Publics de Certificacio ECV-2, OU=Vegeu https://www.catcert.net/verCIC-2 (c)03, OU=Secretaria d'Administracio i Funcio Publica, CN=EC-SAFP;CERTSUBJECT=C=ES, O=Centre Telecomunicacions i Tecnologies de la Informació, OU=Serveis Públics de Certificació CPISR-1, OU=Vegeu https://www.catcert.cat/verCPISR-1 (c)03, SN=GARCIA GARCIA, G=ALBERT, SERIALNUMBER=46587898A, CN=CPISR-1 ALBERT GARCIA GARCIA;CERTIFICATEPOLICY=1.3.6.1.4.1.15096.1.3.1.81
+
 
 HTTP_GICAR_PSIS: que contindrà la resposta de PSIS completa, i estarà enzipada i codificada en base64. Un cop descodificada i desenzipada s’obtindran les dades en la forma que s’especifica en l’annex D.
 </code></pre>
@@ -363,7 +367,9 @@ HTTP_GICAR_PSIS: que contindrà la resposta de PSIS completa, i estarà enzipada
 
 <pre><code>HTTP_GICAR_ID (conté el NIF de l’usuari) --&gt; 11112222W
 
+
 HTTP_GICAR_CERT (conté el classification level, el issuer, el subject, i el OID del certificat)  --&gt; CLASIFICATIONLEVEL=4;CERTISSUER=C=ES, O=Agencia Catalana de Certificacio (NIF Q-0801176-I), L=Passatge de la Concepcio 11 08008 Barcelona, OU=Serveis Publics de Certificacio ECV-2, OU=Vegeu https://www.catcert.net/verCIC-2 (c)03, OU=Secretaria d'Administracio i Funcio Publica, CN=EC-SAFP;CERTSUBJECT=C=ES, O=Centre Telecomunicacions i Tecnologies de la Informació, OU=Serveis Públics de Certificació CPISR-1, OU=Vegeu https://www.catcert.cat/verCPISR-1 (c)03, SN=GARCIA GARCIA, G=ALBERT, SERIALNUMBER=46587898A, CN=CPISR-1 ALBERT GARCIA GARCIA;CERTIFICATEPOLICY=1.3.6.1.4.1.15096.1.3.1.81
+
 
 HTTP_GICAR_PSIS: que contindrà la resposta de PSIS completa, i estarà enzipada i codificada en base64. Un cop descodificada i desenzipada s’obtindran les dades en la forma que s’especifica en l’annex D.
 </code></pre>
@@ -379,11 +385,9 @@ HTTP_GICAR_PSIS: que contindrà la resposta de PSIS completa, i estarà enzipada
 </ul>
 
 <p>En cas de voler obtenir el nom i cognoms de la persona que s’ha autenticat amb certificat, o altres dades del Certificat (excepte el DNI de l’usuari autenticat el qual es pot recuperar fàcilment amb la capçalera HTTP_GICAR_ID), es recomana fer-ho sempre amb la capçalera HTTP_GICAR_PSIS.</p></li>
-</ol>
 
-<ul>
-<li>Tipus de certificats admesos pel servei d’autenticació anònima de GICAR.</li>
-</ul>
+<li><p>Tipus de certificats admesos pel servei d’autenticació anònima de GICAR.</p></li>
+</ol>
 
 <p>El servei d’autenticació anònima de GICAR està preparat per a poder realitzar l’autenticació de qualsevol certificat reconegut per CatCert (Agència Catalana de Certificació). Actualment les següents entitats són reconegudes per CatCert:</p>
 
