--- a/gicar-integracio/migracio-sace/index.html
+++ b/gicar-integracio/migracio-sace/index.html
@@ -361,19 +361,15 @@
 <p>A nivell d’aplicacions el canvi proposat es basa en substituir el formulari de login propietari de l’aplicació anterior, per un JSP, ASP, PHP (element dinàmic de servidor), que estarà protegit a nivell de SiteMinder, que es limiti a fer el següent:</p>
 
 <ol>
-<li>Capturar les següents capçaleres HTTP:</li>
-</ol>
+<li><p>Capturar les següents capçaleres HTTP:</p></li>
 
-<ul>
 <li><p>HTTP_GICAR_ID (conté el NIF de l’usuari) &ndash;&gt; 11112222W
 Captura obligatòria, a partir del qual s’obtindria el DNI de l’usuari autenticat.</p></li>
 
 <li><p>HTTP_GICAR (conté les dades de l’usuari al DC) = “CODIINTERN=NRDRJN0001;NIF=11112222W;EMAIL=mail.admin@gencat.net;UNITAT_MAJOR=CTTI;UNITAT_MENOR=CTTI Qualitat”
 Captura addicional, a partir del qual s’obtindrien altres dades de l’usuari autenticat.</p></li>
-</ul>
 
-<ol>
-<li>Generar la sessió de l’aplicació en base a aquests paràmetres obtinguts en anterioritat.</li>
+<li><p>Generar la sessió de l’aplicació en base a aquests paràmetres obtinguts en anterioritat.</p></li>
 </ol>
 
 <p>Aquest element JSP, ASP, PHP seria l’únic punt de l’aplicació que estaria protegit per SiteMinder, d’aquesta forma aquest JSP, quan fos accedit pel navegador de l’usuari, faria saltar el formulari de login de GICAR, i demanaria les credencials a l’usuari.</p>
