--- a/sgde/documentacio/index.html
+++ b/sgde/documentacio/index.html
@@ -303,7 +303,7 @@
 
 						
 
-<h3 id="presentació-del-servei">Presentació del servei</h3>
+<h3 id="presentació-del-servei:4f26c916b44c030b1d2aa80f4356cc63">Presentació del servei</h3>
 
 <ul>
 <li><a href="/related/sgde/Presentació-SGDE.pdf">Presentació</a></li>
@@ -311,7 +311,7 @@
 
 <p>Per poder utilitzar els serveis del SGDE és necessari donar-se d&rsquo;alta en alguna de les plataformes següents:</p>
 
-<h3 id="plataforma-de-formularis-adobe">Plataforma de Formularis Adobe</h3>
+<h3 id="plataforma-de-formularis-adobe:4f26c916b44c030b1d2aa80f4356cc63">Plataforma de Formularis Adobe</h3>
 
 <ul>
 <li><p><a href="/sgde-related/intro-formularis">Sobre Formularis</a></p></li>
@@ -325,7 +325,7 @@
 <li><p><a href="/related/sgde/GE-Llibre blanc servei corporatiu de formularis.pdf">Llibre blanc servei corporatiu de formularis - Adobe LiveCycle</a></p></li>
 </ul>
 
-<h3 id="sistema-de-transformació-de-documents-o-std">Sistema de Transformació de Documents o STD</h3>
+<h3 id="sistema-de-transformació-de-documents-o-std:4f26c916b44c030b1d2aa80f4356cc63">Sistema de Transformació de Documents o STD</h3>
 
 <ul>
 <li><p><a href="/sgde-related/intro-std">Sobre l&rsquo;STD</a></p></li>
